--- a/app/style.css
+++ b/app/style.css
@@ -6,6 +6,7 @@ html, body {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  font-size: 12px;
 }
 
 *, *:before, *:after {
@@ -19,6 +20,7 @@ body {
 
 body, input {
   font: menu;
+  font-size: 12px;
 }
 
 body > div {
@@ -49,7 +51,6 @@ textarea, input, div, button { outline: none; }
 .controls button {
   background-color: rgb(181, 220, 216);
   border: none;
-  font-size: 1.1em;
   padding: 0.5em 1em;
 }
 
